# small-programs

./: .gitignore  flagexchange.py  hours.py  mouse-escape-code-viewer.c  nodetree.py  rickrollserver.py  roller.py  scorer.py  timestamplify.py  unprefix.py  xor.py
adventofcode-2021/: Cargo.toml  adventofcode.code-workspace  x
adventofcode-2021/src/: lib.rs
adventofcode-2021/src/task16/: 16-packet-decoder.ksy
adventofcode-2022/: .gitignore  CHANGELOG.md  README.md  adventofcode2022.cabal  package.yaml  stack.yaml
adventofcode-2022/app/level1/: Main.hs
adventofcode-2022/src/: Level1.hs
adventofcode-y2023/: CHANGELOG.md  LICENSE  README.md  adventofcode-y2023.cabal  package.yaml  stack.yaml
adventofcode-y2023/app/: DayOneMain.hs  Main.hs
adventofcode-y2023/src/: DayOne.hs  Lib.hs
adventofcode-y2023/test/: DayOneSpec.hs  Spec.hs
bake/: .editorconfig  Cargo.toml  README.md  bakefile.yml
bake/src/: files.rs  lib.rs  main.rs  util.rs
bake/src/bakefile/: mod.rs
bake/src/context/: context.rs  mod.rs
bake/src/context/logger/: mod.rs
bake/src/model/: action.rs  input.rs  mod.rs  output.rs  runresult.rs  task.rs
bake/src/run/: graph.rs  mod.rs
bake/src/traits/: mod.rs
bindiff/: Cargo.toml
bindiff/src/: main.rs
blootdoot/blootdoot/: Cargo.toml
blootdoot/blootdoot/src/: main.rs
blootdoot/frontend/: .gitattributes  .gitignore  index.html  index.ts  package.json
c++modules/: Makefile  main.cpp  x
c++modules/module1/: module1.cppm  module1.pcm  module1_impl.cpp
c++tooling/: snacc.yml
checc/: .checc.lst  .gitignore  Makefile  README.md  checc.lst  go.mod
checc/cmd/: checc.go
checc/internal/checks/command_check/: command_check.go
checc/internal/config/: config_loader.go
checc/internal/model/: config.go  run.go
cursed-string-detector/: BUCK  README.md  cursed-string-detector.c  meson.build  testutil.c
docker-tcpdump/: Cargo.toml  README.md
docker-tcpdump/src/: cli.rs  docker.rs  global_docker.rs  lib.rs  main.rs  network_adapters.rs  packets.rs
docker-tcpdump/src/lib/: mod.rs  network_adapters.rs  packets.rs
euler/: .tool-versions  5.hs  x
foreach/: BUCK  Makefile  README.md  foreach  foreach.cpp  x
ideal-build-tool/: README.md  buildtool
mitmproxy-scripts/: mitmfaultinjection.py  x
ninkiRPC/: BUCK  Makefile  README.md  ninkiRPC  ninkiRPC.cpp  x
permuter/: Cargo.toml  README.md  x
physical-values-rust/: Cargo.toml  x
physical-values-rust/src/: main.rs
process-runner/: CMakeLists.txt  README.md  compile_commands.json
process-runner-kt/: build.gradle.kts  x
process-runner-kt/src/nativeMain/kotlin/net/boxmein/: ProcessRunner.kt
process-runner/examples/: a.yml
process-runner/src/: CMakeLists.txt  Pipfile  configparser.cpp  configparser.h  main.cpp  main.py  prebootrunner.cpp  prebootrunner.h  procrunner.cpp  tmuxautomator.cpp  tmuxautomator.h
process-runner/src/runner/: runner.py
process-runner/src/runner/base/: configuration.py  constants.py
redismanager/: pyproject.toml  redismanager-app.py  x
redismanager/pkg/: admin.py  container_manager.py  identity.py  money.py  repository.py  servers.py
redismanager/pkg/ui/: terminal_dev_tool.py
rust-ratio-type/: Cargo.toml  x
rust-ratio-type/src/: lib.rs
syncwatch/: .editorconfig  Cargo.toml  x
syncwatch/src/: listener.rs  main.rs  remote.rs
tg-minecraft/: .gitignore  .tool-versions  README.md  build.gradle.kts  deploy  gradle.properties  settings.gradle.kts  start  x
tg-minecraft/service/: build.gradle.kts
tg-minecraft/service/src/main/kotlin/net/boxmein/minecraftmanager/: Main.kt  MinecraftManager.kt
tg-minecraft/src/main/kotlin/net/boxmein/tgminecraft/: Main.kt
tg-minecraft/telegrambot/: Dockerfile  build.gradle.kts
tg-minecraft/telegrambot/src/main/kotlin/net/boxmein/tgminecraft/: ApiToken.kt  Authorizer.kt  Main.kt  ServerNotifier.kt  VPSService.kt
tracker-tracker/: .pnp.cjs  .puppeteerrc.yaml  README.md  index.js  package.json
typefoo/: BUCK  Makefile  README  typefoo.cpp  x
use_context/: Cargo.toml  x
use_context/src/: lib.rs
