[package]
name = "bake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65" }
petgraph = { version = "0.6.2" }
glob = { version = "0.3.0" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde_yaml = { version = "0.9.13" }
serde = { version = "1.0.145", features = ["derive"] }
