[package]
name = "docker-tcpdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.0.0"
clap = { version = "4", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "*", features = ["fmt"] }