[package]
name = "docker-tcpdump"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "*"
crossbeam = "*"

anyhow = "*"

pcap = { version = "1.0.0", features = ["capture-stream"] }
docker-api = "0.12.2"
once_cell = "1.16.0"

clap = { version = "4", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "*", features = ["fmt"] }