[tool.poetry]
name = "redismanager"
version = "0.1.0"
description = ""
authors = ["boxmein <wsdf294@gmail.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.9"
inquirer = "^2.9.1"
docker = "^5.0.3"
redis = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
