[package]
name = "blootdoot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
gatt = "0.2.1"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
